tests/negative/neg_pr118c2_entry_public.safe
public function run returns integer
   return 1
